# soomla-bundle

android-core/: AndroidManifest.xml
android-store-google-play/: AndroidManifest.xml
android-store-google-play/src/com/soomla/store/billing/google/: GoogleIabHelper.java  GooglePlayIabService.java
android-store/SoomlaAndroidStore/src/com/soomla/store/: SoomlaStore.java
android-store/SoomlaAndroidStore/src/com/soomla/store/billing/: IabHelper.java
cmake/: CMakeLists.txt
cmake/cmake-modules/: install.cmake  unity-build.cmake
cmake/cocos/: CMakeLists.txt
cmake/ios/: CMakeLists.txt
cmake/jansson/: CMakeLists.txt
cmake/package/: CMakeLists.txt  soomla-config.cmake
cocos2dx-core/Soomla/: CCCoreBridge.cpp  CCCoreBridge.h  CCCoreConsts.cpp  CCCoreEventDispatcher.cpp  CCCoreEventDispatcher.h  CCDomainFactory.cpp  CCDomainFactory.h  CCDomainHelper.cpp  CCDomainHelper.h  CCError.cpp  CCJsonHelper.cpp  CCNdkBridge.cpp  CCSchedule.cpp  CCSchedule.h  CCSoomla.cpp  CCSoomlaConfigBuilder.cpp  CCSoomlaConfigBuilder.h  CCSoomlaEventDispatcher.cpp  Cocos2dxCore.h
cocos2dx-core/Soomla/NativeImpl/: CCNativeCoreBridge.cpp  CCNativeKeyValueStorage.cpp  CCNativeKeyValueStorage.h  CCNativeRewardStorage.cpp  CCNativeRewardStorage.h
cocos2dx-core/Soomla/data/: CCBridgelessKeyValueStorage.cpp  CCBridgelessKeyValueStorage.h  CCKeyValueStorage.cpp  CCRewardStorage.cpp  CCRewardStorage.h
cocos2dx-core/Soomla/domain/: CCDomain.cpp  CCSoomlaEntity.cpp  CCSoomlaEntity.h
cocos2dx-core/Soomla/jsb/: JSBinding.cpp  jsb_soomla.cpp  jsb_soomla.h
cocos2dx-core/Soomla/rewards/: CCAggregateReward.cpp  CCAggregateReward.h  CCBadgeReward.cpp  CCBadgeReward.h  CCRandomReward.cpp  CCRandomReward.h  CCReward.cpp  CCReward.h  CCSequenceReward.cpp  CCSequenceReward.h
cocos2dx-core/development/soomla-native/projects/cocos2dx-android-core/: AndroidManifest.xml
cocos2dx-core/development/soomla-native/projects/cocos2dx-ios-core/CoreCocos2dx/: CCCoreBridgeBinderIos.mm  CCNdkBridgeIos.mm  CommonConsts.h  CommonConsts.mm  CoreBridge.h  CoreBridge.mm  DomainFactory.h  DomainFactory.mm  DomainHelper.h  DomainHelper.mm  NdkGlue.h  NdkGlue.mm
cocos2dx-store/Soomla/: CCSoomlaStore.cpp  CCStoreBridge.cpp  CCStoreConsts.cpp  CCStoreConsts.h  CCStoreEventDispatcher.cpp  CCStoreEventDispatcher.h  CCStoreInventory.cpp  CCStoreInventory.h  Cocos2dxStore.h
cocos2dx-store/Soomla/NativeImpl/: CCNativeSoomlaStore.cpp  CCNativeStoreBridge.cpp  CCNativeStoreInfo.cpp  CCNativeStoreInfo.h  CCNativeVirtualCurrencyStorage.cpp  CCNativeVirtualCurrencyStorage.h  CCNativeVirtualGoodsStorage.cpp  CCNativeVirtualGoodsStorage.h
cocos2dx-store/Soomla/PurchaseTypes/: CCPurchaseType.cpp  CCPurchaseWithMarket.cpp  CCPurchaseWithMarket.h  CCPurchaseWithVirtualItem.cpp  CCPurchaseWithVirtualItem.h
cocos2dx-store/Soomla/config/: CCSoomlaStoreConfigBuilder.cpp  CCSoomlaStoreConfigBuilder.h  CCSoomlaStoreGpConfigBuilder.cpp  CCSoomlaStoreIosConfigBuilder.cpp
cocos2dx-store/Soomla/data/: CCStoreInfo.cpp  CCStoreInfo.h  CCVirtualCurrencyStorage.cpp  CCVirtualCurrencyStorage.h  CCVirtualGoodsStorage.cpp  CCVirtualGoodsStorage.h  CCVirtualItemStorage.cpp  CCVirtualItemStorage.h
cocos2dx-store/Soomla/domain/: CCMarketItem.cpp  CCMarketItem.h  CCPurchasableVirtualItem.cpp  CCPurchasableVirtualItem.h  CCVirtualCategory.cpp  CCVirtualCategory.h  CCVirtualItem.cpp  CCVirtualItem.h
cocos2dx-store/Soomla/domain/virtualCurrencies/: CCVirtualCurrency.cpp  CCVirtualCurrency.h  CCVirtualCurrencyPack.cpp  CCVirtualCurrencyPack.h
cocos2dx-store/Soomla/domain/virtualGoods/: CCEquippableVG.cpp  CCEquippableVG.h  CCLifetimeVG.cpp  CCLifetimeVG.h  CCSingleUsePackVG.cpp  CCSingleUsePackVG.h  CCSingleUseVG.cpp  CCSingleUseVG.h  CCUpgradeVG.cpp  CCUpgradeVG.h  CCVirtualGood.cpp  CCVirtualGood.h
cocos2dx-store/Soomla/rewards/: CCVirtualItemReward.cpp  CCVirtualItemReward.h
cocos2dx-store/development/soomla-native/projects/cocos2dx-android-store/: AndroidManifest.xml
ios-core/SoomlaiOSCore/: Schedule.h  Schedule.m  Soomla.h  Soomla.m  SoomlaConfig.h  SoomlaConfig.m  SoomlaEntity.h  SoomlaEntity.m  SoomlaEventHandling.h  SoomlaEventHandling.m  SoomlaUtils.h  SoomlaUtils.m
ios-core/SoomlaiOSCore/data/: JSONConsts.h  JSONConsts.m  KeyValDatabase.h  KeyValDatabase.m  KeyValueStorage.h  KeyValueStorage.m  RewardStorage.h  RewardStorage.m
ios-core/SoomlaiOSCore/rewards/: BadgeReward.h  BadgeReward.m  RandomReward.h  RandomReward.m  Reward.h  Reward.m  SequenceReward.h  SequenceReward.m
ios-core/SoomlaiOSCore/util/: DictionaryFactory.h  DictionaryFactory.m
ios-store/SoomlaiOSStore/: IStoreAssets.h  SoomlaStore.h  SoomlaStore.m  SoomlaVerification.h  SoomlaVerification.m  StoreConfig.h  StoreConfig.m  StoreEventHandling.h  StoreEventHandling.m  StoreInventory.h  StoreInventory.m
ios-store/SoomlaiOSStore/PurchaseTypes/: PurchaseType.h  PurchaseType.m  PurchaseWithMarket.h  PurchaseWithMarket.m  PurchaseWithVirtualItem.h  PurchaseWithVirtualItem.m
ios-store/SoomlaiOSStore/data/: StorageManager.h  StorageManager.m  StoreInfo.h  StoreInfo.m  StoreJSONConsts.h  StoreJSONConsts.m  VirtualCurrencyStorage.h  VirtualCurrencyStorage.m  VirtualGoodStorage.h  VirtualGoodStorage.m  VirtualItemStorage.h  VirtualItemStorage.m
ios-store/SoomlaiOSStore/domain/: MarketItem.h  MarketItem.m  PurchasableVirtualItem.h  PurchasableVirtualItem.m  VirtualCategory.h  VirtualCategory.m  VirtualItem.h  VirtualItem.m
ios-store/SoomlaiOSStore/domain/virtualCurrencies/: VirtualCurrency.h  VirtualCurrency.m  VirtualCurrencyPack.h  VirtualCurrencyPack.m
ios-store/SoomlaiOSStore/domain/virtualGoods/: EquippableVG.h  EquippableVG.m  LifetimeVG.h  LifetimeVG.m  SingleUsePackVG.h  SingleUsePackVG.m  SingleUseVG.h  SingleUseVG.m  UpgradeVG.h  UpgradeVG.m  VirtualGood.h  VirtualGood.m
ios-store/SoomlaiOSStore/exceptions/: InsufficientFundsException.h  InsufficientFundsException.m  NotEnoughGoodsException.h  NotEnoughGoodsException.m  VirtualItemNotFoundException.h  VirtualItemNotFoundException.m
ios-store/SoomlaiOSStore/rewards/: VirtualItemReward.h  VirtualItemReward.m
(+11 files in other folders)
